tests/unreachable-pattern/out.txt
error: unreachable pattern
  ┌─ err.sml:4:5
  │
4 │   | 4 => 2
  │     ^

typechecking failed
